# hackDeUna

./: .env.example  .gitignore  Makefile  README.md  asistente.html  caja.html  index.html  langgraph.json  menu.html  onboarding.html  pyproject.toml  splash.html
HTML/: asistente.html  caja.html  index.html  menu.html  onboarding.html  splash.html
css/: asistente.css  components.css  layout.css  onboarding.css  splash.css  styles.css
data/: informacion.txt
data/evals/: eval_set_v1.json
deUnaNegocios/: onboarding.css  onboarding.html  onboarding.js  splash.css  splash.html  splash.js
docs/backend/: personas.md  query_registry_design.md
js/: app.js  asistente.js
src/agent/: __init__.py
src/agent/data/: README.md  generate_dataset.py
src/agent/evals/: README.md  __init__.py  build_eval_set.py  profiles_question_bank.yaml  run_agent_eval.py
src/agent/prompts/: generate_answer.md  interpret_query.md
src/agent/semantics/: __init__.py  eval_question_bank.yaml  intents.yaml  profiles.yaml  query_registry.yaml
src/agent/validation/: __init__.py  validate_dataset.py
src/server/: __init__.py
src/server/api/: __init__.py  app.py
src/server/assistant/: __init__.py  answer_generator.py  intent_classifier.py  models.py  service.py  text2sql.py
src/server/langgraph_agent/: __init__.py  graph.py  prompts.py  tools.py
